--- a/includes/assets/css/styleMH.css
+++ b/includes/assets/css/styleMH.css
@@ -314,7 +314,7 @@
 	color: white;
 	text-align: center;
 	border-radius: 2px;
-	background: #13a2e9;
+	background-color: #13a2e9;
 	width: 100%;
 	margin-bottom: 10px;
 	padding-top: 5px;
